# ROS-in-Python

./: README.md
catkin_ws/: .dist.txt  ps.txt
catkin_ws/devel/include/actions_quiz/: CustomActionMsgAction.h  CustomActionMsgActionFeedback.h  CustomActionMsgFeedback.h
catkin_ws/devel/lib/pkgconfig/: my_new-package.pc  services_quiz.pc
catkin_ws/src/actions_quiz/: CMakeLists.txt  package.xml
catkin_ws/src/actions_quiz/launch/: action_custom_msg.launch
catkin_ws/src/actions_quiz/scripts/: action_server.py
catkin_ws/src/bb8_circle_service/: CMakeLists.txt  package.xml
catkin_ws/src/bb8_circle_service/launch/: call_bb8_move_custom_service_server.launch  call_bb8_move_in_circle_service_server.launch  start_bb8_move_custom_service_server.launch  start_bb8_move_in_circle_service_server.launch
catkin_ws/src/bb8_circle_service/scripts/: bb8_move_custom_service_client.py  bb8_move_custom_service_server.py  bb8_move_in_circle_service_client.py  bb8_move_in_circle_service_server.py
catkin_ws/src/drone_action_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/exercise_3_1/: CMakeLists.txt  package.xml
catkin_ws/src/exercise_5_1/: CMakeLists.txt  package.xml
catkin_ws/src/my_custom_srv_msg_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/my_subscriber_example_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/new_publisher_example_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/new_service_client_example_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/new_subscriber_example_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/services_quiz/: CMakeLists.txt
(+35 files in other folders)
